<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
  android:title="@string/action_settings">

  <PreferenceCategory android:title="@string/settings_title">
    <!--<SwitchPreference
    android:title="@string/settings_switch_high_quality_title"
    android:summary="@string/settings_switch_high_quality_summary"
    android:key="key_preference_switch_high_quality" />-->

    <ListPreference
      android:defaultValue="2"
      android:entries="@array/recording_formats_titles"
      android:entryValues="@array/recording_formats_values"
      android:key="recording_formats"
      android:summary="Set your preferred recording format"
      android:title="Recording format" />

    <ListPreference
      android:defaultValue="44100"
      android:entries="@array/recording_sampling_rate_titles"
      android:entryValues="@array/recording_sampling_rate_values"
      android:key="recording_sampling_rate"
      android:summary="@string/settings_sampling_rate_title"
      android:title="@string/settings_sampling_rate_title" />
  </PreferenceCategory>

  <PreferenceCategory android:title="@string/settings_category_notifications">
    <SwitchPreference
      android:key="key_preference_switch_persistent_notification"
      android:summary="@string/settings_switch_persistent_notification_summary"
      android:title="@string/settings_switch_persistent_notification_title" />
  </PreferenceCategory>
</PreferenceScreen>